--- a/ui/src/i18n/en.json
+++ b/ui/src/i18n/en.json
@@ -86,6 +86,7 @@
     "title": "Events",
     "noEventsFound": "No events found",
     "table": "Events",
+    "eventsPerPage": "Events per page",
     "event": {
       "experiment": "Experiment",
       "uuid": "UUID",
@@ -124,11 +125,15 @@
     "start": "Start",
     "pause": "Pause",
     "update": "Update",
+    "status": "Status",
     "configuration": "Configuration",
     "confirm": "Confirm",
     "cancel": "Cancel",
-    "createedSuccessfully": "Created successfully",
-    "importedSuccessfully": "Imported successfully",
+    "createSuccessfully": "Created successfully",
+    "importSuccessfully": "Imported successfully",
+    "deleteSuccessfully": "Archived successfully",
+    "startSuccessfully": "Started successfully",
+    "pauseSuccessfully": "Paused successfully",
     "timeline": "Timeline",
     "search": "Search"
   },
