chore: update i18n and add dark mode
Signed-off-by: Yue Yang <g1enyy0ung@gmail.com>

--- a/ui/src/i18n/en.json
+++ b/ui/src/i18n/en.json
@@ -45,10 +45,32 @@
         "title": "Pod Lifecycle",
         "actionHelper": "Select a PodChaos action",
         "containerName": "Container Name",
-        "containerNameHelper": "Fill the container name you want to kill"
+        "containerNameHelper": "Fill the container name"
       },
       "network": {
-        "title": "Network"
+        "title": "Network",
+        "actionHelper": "Select a NetworkChaos action",
+        "target": {
+          "title": "Target",
+          "podsPreview": "Target Pods Preview",
+          "podsPreviewHelper": "Checking or unchecking Pods to further limit the scope of the target"
+        },
+        "partition": {
+          "direction": "Direction",
+          "directionHelper": "Specifies the partition direction"
+        },
+        "bandwidth": {
+          "rate": "Rate",
+          "rateHelper": "The rate allows bps, kbps, mbps, gbps, tbps unit. For example, bps means bytes per second",
+          "buffer": "Buffer",
+          "bufferHelper": "The maximum amount of bytes that tokens can be available instantaneously",
+          "limit": "Limit",
+          "limitHelper": "The number of bytes that can be queued waiting for tokens to become available",
+          "peakrate": "Peak rate",
+          "peakrateHelper": "The maximum depletion rate of the bucket",
+          "minburst": "Min Burst",
+          "minburstHelper": "The size of the peakrate bucket"
+        }
       },
       "io": {
         "title": "File System I/O"
@@ -57,10 +79,13 @@
         "title": "Linux Kernel"
       },
       "time": {
-        "title": "Clock"
+        "title": "Clock",
+        "offset": "Offset",
+        "offsetHelper": "Fill the time offset"
       },
       "stress": {
-        "title": "Stress CPU/Memory"
+        "title": "Stress CPU/Memory",
+        "actionHelper": "Select a StressChaos action"
       }
     },
     "schedule": {
@@ -119,7 +144,11 @@
   },
   "settings": {
     "title": "Settings",
-    "languages": "Languages",
+    "theme": "Theme",
+    "chooseTheme": "Choose theme",
+    "themeLight": "Light",
+    "themeDark": "Dark",
+    "language": "Language",
     "chooseInterfaceLanguage": "Choose interface language",
     "en": "English",
     "zh": "Chinese"
@@ -143,6 +172,7 @@
     "update": "Update",
     "status": "Status",
     "configuration": "Configuration",
+    "configured": "Configured",
     "confirm": "Confirm",
     "cancel": "Cancel",
     "createSuccessfully": "Created successfully",
