--- a/ui/src/i18n/zh.json
+++ b/ui/src/i18n/zh.json
@@ -174,6 +174,23 @@
       "pod": "pod:echoserver-774cdcc8b6-nrm65 将搜索发生在指定 pod 上的事件",
       "ip": "ip:172.17.0.6 类似于 pod:xxx，只不过通过 pod IP 进行过滤",
       "uuid": "uuid:2f79a4d6-1952-45b5-b2d5-ce715823c7a7 将搜索带有指定实验 UUID 的事件，实验以及归档"
+    },
+     "result": {
+      "category": {
+        "events": "事件",
+        "experiments": "实验",
+        "archives": "归档"
+      },
+      "keywords": {
+        "Experiment": "实验",
+        "UUID": "UUID",
+        "IP": "IP地址",
+        "Kind": "实验类型",
+        "Pod": "Pod",
+        "Namespace": "命名空间",
+        "Start Time": "开始时间" 
+      },
+      "noResult": "无结果"
     }
   },
   "k8s": {
