--- a/ui/src/i18n/en.json
+++ b/ui/src/i18n/en.json
@@ -26,7 +26,7 @@
       "mode": "Mode",
       "modeHelper": "Select the experiment mode",
       "modeValue": "Mode Value",
-      "modeValuehelper": "Please fill the mode value",
+      "modeValueHelper": "Please fill the mode value",
       "affectedPods": "Affected Pods",
       "affectedPodsPreview": "Affected Pods Preview",
       "affectedPodsPreviewHelper": "Checking or unchecking Pods to further limit the scope of the experiment",
@@ -162,9 +162,36 @@
     "pauseSuccessfully": "Paused successfully",
     "updateSuccessfully": "Updated successfully",
     "timeline": "Timeline",
-    "search": "Search",
     "meta": "Meta",
     "uuid": "UUID"
+  },
+  "search": {
+    "placeholder": "Search",
+    "tip": {
+      "title": "The following search syntax can help to locate the events, experiments and archives quickly:",
+      "namespace": "namespace:default xxx will search for events, experiments and archives with namespace default",
+      "kind": "kind:NetworkChaos xxx will search for events, experiments and archives with kind NetworkChaos, you can also type kind:net because the search is fuzzy",
+      "pod": "pod:echoserver-774cdcc8b6-nrm65 will search for events by affected pod",
+      "ip": "ip:172.17.0.6 is similar to pod:xxx, filter by pod IP",
+      "uuid": "uuid:2f79a4d6-1952-45b5-b2d5-ce715823c7a7 will search for events, experiments and archives by experimental uuid"
+    },
+    "result": {
+      "category": {
+        "events": "Events",
+        "experiments": "Experiments",
+        "archives": "Archives"
+      },
+      "keywords": {
+        "Experiment": "Experiment",
+        "UUID": "UUID",
+        "IP": "IP",
+        "Kind": "Kind",
+        "Pod": "Pod",
+        "Namespace": "Namespace",
+        "Start Time": "Start Time" 
+      },
+      "noResult": "No Result"
+    }
   },
   "k8s": {
     "labels": "Labels",
