--- a/ui/src/i18n/en.json
+++ b/ui/src/i18n/en.json
@@ -5,6 +5,8 @@
   },
   "newE": {
     "title": "New Experiment",
+    "titleStep1": "Choose a Target",
+    "titleStep2": "Fill the experiment info",
     "create": "Create a New Experiment",
     "steps": {
       "basic": "Basic",
@@ -12,9 +14,9 @@
       "target": "Target",
       "schedule": "Schedule"
     },
-    "loadFromExistingExperiments": "Load From Existing Experiments",
+    "loadFromExperiments": "Load From Existing Experiments",
     "loadFromArchives": "Load From Archives",
-    "loadFromYamlFile": "Load From YAML File",
+    "loadFromYaml": "Load From YAML File",
     "basic": {
       "name": "Name",
       "nameHelper": "The experiment name",
@@ -70,7 +72,7 @@
     },
     "schedule": {
       "tooltip": "Chaos Mesh use {cronv3} to define the schedule. View its doc for more details.",
-      "immediate": "Immediate",
+      "immediate": "Run immediately",
       "mustBeScheduled": "The chosen action must be scheduled",
       "cronHelper": "Use {crontabguru} to help generate the cron job and confirm what time it will run",
       "duration": "Duration",
@@ -188,7 +190,7 @@
         "Kind": "Kind",
         "Pod": "Pod",
         "Namespace": "Namespace",
-        "Start Time": "Start Time" 
+        "Start Time": "Start Time"
       },
       "noResult": "No Result"
     }
