--- a/ui/src/i18n/en.json
+++ b/ui/src/i18n/en.json
@@ -133,6 +133,14 @@
     "en": "English",
     "zh": "Chinese"
   },
+  "account": {
+    "title": "Account",
+    "token": "Token",
+    "tokenInputHelper": "Please input your token",
+    "tokenTips": "To use chaos mesh, you must input your token here.",
+    "tokenChangeHelper": "You can change your token here",
+    "tokenValidation": "The token can not be empty"
+  },
   "common": {
     "doc": "Documentation",
     "back": "Back",
@@ -161,6 +169,7 @@
     "startSuccessfully": "Started successfully",
     "pauseSuccessfully": "Paused successfully",
     "updateSuccessfully": "Updated successfully",
+    "submitSuccessfully": "Submitted successfully",
     "timeline": "Timeline",
     "meta": "Meta",
     "uuid": "UUID"
@@ -199,5 +208,8 @@
     "labelSelectors": "Label Selectors",
     "annotationsSelectors": "Annotation Selectors",
     "phaseSelectors": "Phase Selectors"
+  },
+  "login": {
+    "welcome": "Welcome to Chaos Mesh"
   }
 }
