--- a/ui/src/i18n/zh.json
+++ b/ui/src/i18n/zh.json
@@ -5,16 +5,16 @@
   },
   "newE": {
     "title": "新的实验",
+    "titleStep1": "选择目标",
+    "titleStep2": "填写实验信息",
     "create": "创建新的实验",
     "steps": {
       "basic": "基本信息",
       "scope": "范围",
-      "target": "目标",
       "schedule": "计划"
     },
-    "loadFromExistingExperiments": "从已有实验加载",
-    "loadFromArchives": "从归档加载",
-    "loadFromYamlFile": "从 YAML 文件加载",
+    "loadFrom": "加载自",
+    "loadFromYaml": "从 YAML 文件加载",
     "basic": {
       "name": "名称",
       "nameHelper": "实验的名称",
@@ -42,12 +42,10 @@
       "kind": "类别",
       "action": "行为",
       "pod": {
-        "title": "Pod 生命周期",
-        "actionHelper": "选择 PodChaos 行为"
+        "title": "Pod 生命周期"
       },
       "network": {
         "title": "网络",
-        "actionHelper": "选择 NetworkChaos 行为",
         "target": {
           "title": "目标",
           "podsPreview": "预览目标 Pod",
@@ -64,14 +62,13 @@
         "title": "时钟"
       },
       "stress": {
-        "title": "CPU/Memory 压力测试",
-        "actionHelper": "选择 StressChaos 行为"
+        "title": "CPU/Memory 压力测试"
       }
     },
     "schedule": {
       "tooltip": "Chaos Mesh 使用 {cronv3} 来定义计划。参考其文档以获取更详细的信息。",
-      "immediate": "立即执行",
-      "mustBeScheduled": "选择的实验操作必须按计划执行",
+      "immediate": "立即运行",
+      "mustBeScheduled": "所选实验必须按计划执行",
       "cronHelper": "使用 {crontabguru} 来帮助生成 cron job 并确认它将在何时运行",
       "duration": "持续时间",
       "durationHelper": "实验的持续时间"
@@ -156,7 +153,7 @@
     "confirm": "确认",
     "cancel": "取消",
     "createSuccessfully": "创建成功",
-    "importSuccessfully": "导入成功",
+    "loadSuccessfully": "加载成功",
     "deleteSuccessfully": "归档成功",
     "startSuccessfully": "启动成功",
     "pauseSuccessfully": "暂停成功",
