refactor: token implement
Signed-off-by: Yue Yang <g1enyy0ung@gmail.com>

--- a/ui/src/i18n/en.json
+++ b/ui/src/i18n/en.json
@@ -121,58 +121,61 @@
   },
   "settings": {
     "title": "Settings",
-    "theme": "Theme",
-    "chooseTheme": "Choose theme",
-    "themeLight": "Light",
-    "themeDark": "Dark",
-    "language": "Language",
-    "chooseInterfaceLanguage": "Choose interface language",
-    "en": "English",
-    "zh": "Chinese"
-  },
-  "account": {
-    "title": "Account",
-    "token": "Token",
-    "tokenInputHelper": "Please input your token",
-    "tokenTips": "To use chaos mesh, you must input your token here.",
-    "tokenChangeHelper": "You can change your token here",
-    "tokenValidation": "The token can not be empty",
-    "namespaceInputHelper": "Please input the namespace matched with the token privilege",
-    "namespaceTips": "To use chaos mesh, you must input your namespace here.",
-    "namespaceValidation": "The namespace can not be empty"
+    "theme": {
+      "title": "Theme",
+      "choose": "Choose theme",
+      "light": "Light",
+      "dark": "Dark"
+    },
+    "lang": {
+      "title": "Language",
+      "choose": "Choose interface language",
+      "en": "English",
+      "zh": "Chinese"
+    },
+    "addToken": {
+      "prompt": "Enter the token (RBAC Authorization) to continue",
+      "title": "Add Token",
+      "name": "Name",
+      "nameHelper": "Please fill the token name",
+      "nameValidation": "The token name is required",
+      "token": "Token",
+      "tokenHelper": "Please fill the secret token",
+      "tokenValidation": "The token is required",
+      "deleteDesc": "The operation is irreversible"
+    }
   },
   "common": {
+    "other": "Other",
     "doc": "Documentation",
-    "back": "Back",
-    "next": "Next",
-    "finish": "Finish",
-    "reset": "Reset",
+    "confirm": "Confirm",
+    "cancel": "Cancel",
     "submit": "Submit",
     "upload": "Upload",
-    "advancedOptions": "Advanced Options",
-    "isKVHelperText": "Type key:value and end with a space to generate a key/value pair",
-    "multiOptions": "Support mutiple options",
-    "noOptions": "No options",
     "detail": "Detail",
     "report": "Report",
     "start": "Start",
     "pause": "Pause",
     "update": "Update",
+    "delete": "Delete",
     "status": "Status",
+    "use": "Use",
+    "using": "Using",
     "configuration": "Configuration",
-    "configured": "Configured",
-    "confirm": "Confirm",
-    "cancel": "Cancel",
+    "noOptions": "No options",
+    "multiOptions": "Support mutiple options",
+    "advancedOptions": "Advanced Options",
+    "isKVHelperText": "Type key:value and end with a space to generate a key/value pair",
+    "timeline": "Timeline",
+    "meta": "Meta",
+    "uuid": "UUID",
     "createSuccessfully": "Created successfully",
     "loadSuccessfully": "Loaded successfully",
     "deleteSuccessfully": "Archived successfully",
     "startSuccessfully": "Started successfully",
     "pauseSuccessfully": "Paused successfully",
     "updateSuccessfully": "Updated successfully",
-    "submitSuccessfully": "Submitted successfully",
-    "timeline": "Timeline",
-    "meta": "Meta",
-    "uuid": "UUID"
+    "submitSuccessfully": "Submitted successfully"
   },
   "search": {
     "placeholder": "Search",
